fix error with html escape charactergit add .git add .!

--- a/docs/javascript-dasar-1/membuat-environment-belajar.mdx
+++ b/docs/javascript-dasar-1/membuat-environment-belajar.mdx
@@ -48,4 +48,4 @@ Masuk ke folder lewat terminal windows
  cd belajar-javascript
 ```
 
-Sekarang kita sudah punya semua kebutuhan untuk belajar, so mari kita mulai dengan belajar javascript dasar tahap 1☺️.
+Sekarang kita sudah punya semua kebutuhan untuk belajar, so mari kita mulai dengan belajar javascript dasar tahap 1.
