I don't know what how to describe it, but it works! :D

--- a/docs/javascript-dasar-1/membuat-environment-belajar.mdx
+++ b/docs/javascript-dasar-1/membuat-environment-belajar.mdx
@@ -22,8 +22,9 @@ Code editor yang saya rekomendasikan adalah [Visual Studio Code](https://code.vi
 
 ## Install VSCode Extension
 
-Sekarang saya asumsikan kamu sudah berhasil menginstall vscode, step selanjutnya adalah install extension biar enak pas ngoding javascript.
-klik `View > Extensions` atau menggunakan shortcut: `Ctrl + Shift + X`.
+Sekarang saya asumsikan kamu sudah berhasil menginstall vscode, step selanjutnya adalah install extension vscode. Extension ini berguna untuk menambah fitur yang dapat membantu pemrograman kita menjadi lebih cepat dan efisien.
+
+Buka VSCode lalu klik `View > Extensions` atau menggunakan shortcut: `Ctrl + Shift + X`.
 
 Cari extension biar ngodingnya enak:
 
@@ -48,4 +49,4 @@ Masuk ke folder lewat terminal windows
  cd belajar-javascript
 ```
 
-Sekarang kita sudah punya semua kebutuhan untuk belajar, so mari kita mulai dengan belajar javascript dasar tahap 1.
+Sekarang kita sudah punya semua kebutuhan untuk belajar, so mari kita mulai dari mempelajari value dan variable!
