tutorial tipe data

--- a/docs/javascript-dasar-1/value-variable.mdx
+++ b/docs/javascript-dasar-1/value-variable.mdx
@@ -2,11 +2,13 @@
 sidebar_position: 2
 ---
 
+# Value dan Variable
+
 import BeautySentence from "@site/src/components/chunks/BeautySentence";
 
 Kamu beneran mulai! Semoga kamu bisa komitmen belajarnya ya. Selamat belajar!
 
-# Value dan Variable
+## Apa itu value dan variable?
 
 Value dan variable ibarat sendal kiri dan kanan, mereka ada dan selalu <BeautySentence>bersama</BeautySentence> untuk saling melengkapi! Meski begitu, keduanya memiliki definisi masing-masing loh. Seperti apa? Yuk kita pahami penjelasan dibawah ini!
 
