create button widgets

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -8,5 +8,5 @@ sidebar_position: 1
 Javascript merupakan bahasa scripting yang banyak digunakan dalam pengembangan aplikasi web. Meskipun begitu, sekarang sudah banyak library atau framework yang memanfaatkan bahasa Javascript untuk pengembangan aplikasi mobile dan desktop.
 
 :::note
-Javascript merupakan bahasa pemrograman yang multi-paradigm, high level object oriented. Bagaimana itu? Klik disini untuk membaca penjelasan lengkapnya.
+Secara teori, Javascript merupakan bahasa pemrograman yang multi-paradigm, high level object oriented. Bagaimana itu? Klik disini untuk membaca penjelasan lengkapnya.
 :::
