working on pengenalan javascript

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -3,10 +3,19 @@ title: Pengenalan Javascript
 sidebar_position: 1
 ---
 
+import Link from "@docusaurus/Link";
+
 ## Apa itu Javascript&#63;
 
 Javascript merupakan bahasa scripting yang banyak digunakan dalam pengembangan aplikasi web. Meskipun begitu, sekarang sudah banyak library atau framework yang memanfaatkan bahasa Javascript untuk pengembangan aplikasi mobile dan desktop.
 
 :::note
-Secara teori, Javascript merupakan bahasa pemrograman yang multi-paradigm, high level object oriented. Bagaimana itu? Klik disini untuk membaca penjelasan lengkapnya.
+Secara teori, Javascript merupakan bahasa pemrograman yang multi-paradigm, high level object oriented. Bagaimana itu? Klik <Link to="/blog/penjelasan%20javascript%20secara%20teori">**disini**</Link> untuk membaca penjelasan lengkapnya.
 :::
+
+## Role Javascript di Aplikasi Web
+
+Perhatikan ilustrasi berikut:
+![Ilustrasi HTML, CSS, dan Javascript di aplikasi web](./assets/bahasjs-html-css-js.png)
+
+Jika HTML adalah struktur website, css adalah desain tampilan website, maka Javascript adalah yang membuat websitenya menjadi lebih menarik dan interaktif.
