--- a/blog/2022-12-31-penjelasan-javascript-secara-teori/index.mdx
+++ b/blog/2022-12-31-penjelasan-javascript-secara-teori/index.mdx
@@ -1,3 +1,10 @@
+---
+slug: penjelasan javascript secara teori
+title: Penjelasan Javascript Secara Teori
+authors: [rizky]
+tags: [html, css]
+---
+
 Javascript merupakan bahasa scripting yang banyak digunakan dalam pengembangan aplikasi web. Meskipun begitu, sekarang sudah banyak library atau framework yang memanfaatkan bahasa Javascript untuk pengembangan aplikasi mobile dan desktop.
 
 :::note
