menambah materi tipe data primitive

--- a/docs/javascript-dasar-1/tipe-data.mdx
+++ b/docs/javascript-dasar-1/tipe-data.mdx
@@ -39,3 +39,12 @@ Ada 7 jenis primitive value:
 | 5.  | **Null**        | Value spesial yang berarti 'tidak ada', 'kosong', atau 'tidak diketahui'.                                                              |
 | 6.  | **Symbol**(ES5) | Adalah Untuk memberi identifier unik ke object. _Sekarang sudah tidak terlalu berguna._                                                |
 | 7.  | **BigInt**      | Digunakan untuk menyimpan bilangan bulat(integer) yang berukuran besar bahkan dapat melewati anjuran batas aman yang telah ditentukan. |
+
+Contoh penggunaan tipe data primitive:
+
+```javascript
+const nama = "Cinthya Rizky";
+const usia = 12;
+const perempuan = true;
+const hobi = undefined;
+```
