update tutorial tipe data

--- a/blog/2022-12-31-penjelasan-javascript-secara-teori/index.mdx
+++ b/blog/2022-12-31-penjelasan-javascript-secara-teori/index.mdx
@@ -5,15 +5,13 @@ authors: [rizky]
 tags: [html, css]
 ---
 
-Javascript merupakan bahasa scripting yang banyak digunakan dalam pengembangan aplikasi web. Meskipun begitu, sekarang sudah banyak library atau framework yang memanfaatkan bahasa Javascript untuk pengembangan aplikasi mobile dan desktop.
+Javascript merupakan bahasa pemrograman yang multi-paradigm, high level object oriented. Baca dan pahami baik-baik tabel kosakata berikut:
 
-:::note
-Javascript merupakan bahasa pemrograman yang multi-paradigm, high level object oriented.
+| Kata               | Penjelasan                                                                                                                                                                                                                                                                                                                                                                                                                                          |
+| ------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Bahasa pemrograman | Alat yang bisa kita gunakan untuk memberi perintah kepada komputer.                                                                                                                                                                                                                                                                                                                                                                                 |
+| Multi-paradigm     | Paradigm(baca: _peredeym_) atau paradigma dalam pemrograman merupakan cara mengklasifikasi bahasa berdasarkan fitur-fiturnya. Contoh umum paradigma pemrograman adalah paradigma _imperative_ dan _declarative_. Dikasus ini, Javascript dapat digunakan dalam satu atau lebih paradigma sehingga Javascript diklasifikasikan kedalam _multi-paradigm_.                                                                                             |
+| high level         | _High-level_ atau tingkat tinggi berarti kita tidak perlu memikirkan bagaimana bahasa ini bekerja dan bagaimana bahasa ini diproses oleh komputer(_sebagai contoh kita tidak perlu memikirkan bagaimana variable disimpan didalam memori_).                                                                                                                                                                                                         |
+| Object-oriented    | _Object-oriented/berorientasi objek_. Alih-alih memperhatikan fungsionalitas dan logika, ketika kita menggunakan bahasa yang berorientasi objek, kita akan merancang aplikasi dengan merujuk pada objek nyata. **Bayangkan kamu sedang memprogram data sebuah mobil, kita seharusnya lebih terfokus kepada properti yang dimiliki mobil(warna, merk, ban, jumlah pintu, dll) tersebut dibandingkan dengan bagaimana mobil tersebut bisa berjalan**. |
 
-| Kata               | Penjelasan                                                                                                            |
-| ------------------ | --------------------------------------------------------------------------------------------------------------------- |
-| Bahasa pemrograman | Alat yang bisa kita gunakan untuk memberi perintah kepada komputer.                                                   |
-| Multi-paradigm     |                                                                                                                       |
-| high level         | itu berarti kita tidak perlu memikirkan bagaimana bahasa ini bekerja dan bagaimana bahasa ini diproses oleh komputer. |
-
-:::
+Setelah memahami kosakata diatas, dapat disimpulkan bahwa Javascript merupakan bahasa pemrograman yang sederhana, berorientasi objek nyata dan dapat ditulis dalam bentuk paradigma apapun.
