--- a/docs/javascript-dasar-1/tipe-data.mdx
+++ b/docs/javascript-dasar-1/tipe-data.mdx
@@ -25,6 +25,17 @@ Contoh value berupa **primitive** itu seperti ini:
 const namaLengkap = "Cinthya Rizky";
 ```
 
+## Cara mengetahui jenis tipe data
+
+Jika kamu ingin mengetahui tipe data dari sebuah variable atau value, kamu bisa menggunakan keyword `typeof`.
+
+```javascript
+const namaLengkap = "Cinthya Rizky";
+
+console.log(typeof namaLengkap);
+//Output: string
+```
+
 ## Primitive Value
 
 Sekarang mari fokus ke _primitive value_ dulu.
@@ -47,4 +58,12 @@ const nama = "Cinthya Rizky";
 const usia = 12;
 const perempuan = true;
 const hobi = undefined;
+
+console.log(nama, usia, perempuan, hobi);
+//Output : Cinthya Rizky, 12, true, undefined
+
+console.log(typeof nama, typeof usia, typeof perempuan, typeof hobi);
+//Output : string, number, boolean, undefined
 ```
+
+##
