refactoring blog folder structure based on the date created

--- a/blog/2022/12/30/cara-belajar-html-css/index.mdx
+++ b/blog/2022/12/30/cara-belajar-html-css/index.mdx
@@ -7,6 +7,10 @@ tags: [html, css]
 
 # Cara Belajar HTML dan CSS untuk Pemula
 
+Tips buat kamu yang bingung mau mulai belajar HTML & CSS dari mana.
+
+<!--truncate-->
+
 ![Code](./code.jpg)
 
 Sebagai orang yang mempelajari HTML dan CSS sendirian, saya dapat mengatakan bahwa tidak ada “cara terbaik” untuk mempelajari sesuatu secara umum. Cara saya melakukannya adalah menghabiskan sisa waktu saya setiap hari sepulang kuliah dan bekerja. Browsing di internet dan beli buku, dalam hal ini adalah HTML/CSS maka saya akan baca-baca di freecodecamp, W3Schools, dan MDN kemudian menuliskan semuanya yang sulit untuk saya pahami di kertas atau Microsoft Word(tapi sekarang lebih suka menggunakan Notion sih), kemudian saya coba membuat situs web sendiri. Tidak ada waktu untuk nongkrong atau main game. Bagi saya cara belajar seperti itu sangat berhasil, tetapi bagi kamu mungkin mengerikan wkwk.
