--- a/blog/2022/12/31/penjelasan-javascript-secara-teori/index.mdx
+++ b/blog/2022/12/31/penjelasan-javascript-secara-teori/index.mdx
@@ -2,8 +2,12 @@
 slug: penjelasan javascript secara teori
 title: Penjelasan Javascript Secara Teori
 authors: [rizky]
-tags: [html, css]
+tags: [javascript dasar, pengertian]
 ---
+
+Di postingan ini kita akan belajar definisi Javascript secara teori, dimana tidak dijelaskan di sesi tutorial.
+
+<!--truncate-->
 
 Javascript merupakan bahasa pemrograman yang multi-paradigm, high level object oriented. Baca dan pahami baik-baik tabel kosakata berikut:
 
