pseudo code revision

--- a/blog/2023/01/01/pseudo-code/index.mdx
+++ b/blog/2023/01/01/pseudo-code/index.mdx
@@ -2,7 +2,7 @@
 title: Pseudo Code
 ---
 
-Pseudo code adalah bahasa sederhana yang bisa manfaatkan untuk tidak memikirkan sintaks bahasa pemrograman dan hanya berfokus pada algoritma program.
+Pseudo code adalah bahasa sederhana yang membantu kita untuk tidak memikirkan sintaks bahasa pemrograman dan hanya berfokus pada algoritma program.
 
 <!--truncate-->
 
