add frontmatter to the blog that havnt

--- a/blog/2023/01/01/javascript-object-oriented/index.mdx
+++ b/blog/2023/01/01/javascript-object-oriented/index.mdx
@@ -1,5 +1,8 @@
 ---
 title: Object Oriented Programming
+slug: object 0riented Programming
+authors: [rizky]
+tags: [pemrograman, pemula]
 ---
 
 Belajar Object Oriented Programming dan bagaimana penerapannya di bahasa Javascript.
