--- a/blog/2023/01/01/pseudo-code/index.mdx
+++ b/blog/2023/01/01/pseudo-code/index.mdx
@@ -1,5 +1,8 @@
 ---
 title: Pseudo Code
+slug: pseudo code
+authors: [rizky]
+tags: [pemrograman, pemula]
 ---
 
 Pseudo code adalah bahasa sederhana yang membantu kita untuk tidak memikirkan sintaks bahasa pemrograman dan hanya berfokus pada algoritma program.
