--- a/blog/2023/01/01/javascript-object-oriented/index.mdx
+++ b/blog/2023/01/01/javascript-object-oriented/index.mdx
@@ -9,4 +9,15 @@ Belajar Object Oriented Programming dan bagaimana penerapannya di bahasa Javascr
 
 <!--truncate-->
 
-_Object-oriented/berorientasi objek_. Alih-alih memperhatikan fungsionalitas dan logika, ketika kita menggunakan bahasa yang berorientasi objek, kita akan merancang aplikasi dengan merujuk pada objek nyata. **Bayangkan kamu sedang memprogram data sebuah mobil, kita seharusnya lebih terfokus kepada properti yang dimiliki mobil(warna, merk, ban, jumlah pintu, dll) tersebut dibandingkan dengan bagaimana mobil tersebut bisa berjalan**.
+_Object-oriented/berorientasi objek_. Alih-alih memperhatikan fungsionalitas dan logika, ketika kita menggunakan bahasa yang berorientasi objek, kita akan merancang aplikasi dengan merujuk pada objek nyata.Object Oriented Programming juga biasa disingkat dengan OOP.
+
+Dengan pendekatan yang terfokus kepada objek, maka OOP akan sangat tepat untuk diterapkan pada aplikasi yang besar, kompleks, dan akan sering mendapatkan update.
+
+## Struktur Object Oriented Programming
+
+| Nama      | Deskripsi                                                                                                                               |
+| --------- | --------------------------------------------------------------------------------------------------------------------------------------- |
+| Class     | Sebuah template yang kita tentukan untuk menentukan objek, Attribute, dan Method                                                        |
+| Object    | Turunan dari sebuah Class yang dibuat berdasarkan template.                                                                             |
+| Method    | Sebuah function yang dibuat didalam Class yang menjelaskan mekanisme dari Class tersebut. Method ini dapat diakses oleh object turunan. |
+| Attribute | Adalah sebuah properti yang dideklarasikan didalam Class untuk mendeskripsikan hal-hal yang dimiliki oleh Class tersebut                |
