update oop blog

--- a/blog/2023/01/01/javascript-object-oriented/index.mdx
+++ b/blog/2023/01/01/javascript-object-oriented/index.mdx
@@ -1,19 +1,28 @@
 ---
-title: Object Oriented Programming
+title: Object-Oriented Programming
 slug: object 0riented Programming
 authors: [rizky]
 tags: [pemrograman, pemula]
 ---
 
-Belajar Object Oriented Programming dan bagaimana penerapannya di bahasa Javascript.
+Belajar Object-Oriented Programming dan bagaimana penerapannya di bahasa Javascript.
 
 <!--truncate-->
 
-_Object-oriented/berorientasi objek_. Alih-alih memperhatikan fungsionalitas dan logika, ketika kita menggunakan bahasa yang berorientasi objek, kita akan merancang aplikasi dengan merujuk pada objek nyata.Object Oriented Programming juga biasa disingkat dengan OOP.
+_Object-oriented/berorientasi objek_. Alih-alih memperhatikan fungsionalitas dan logika, ketika kita menggunakan bahasa yang berorientasi objek, kita akan merancang aplikasi dengan merujuk pada objek nyata.Object-Oriented Programming juga biasa disingkat dengan OOP.
 
 Dengan pendekatan yang terfokus kepada objek, maka OOP akan sangat tepat untuk diterapkan pada aplikasi yang besar, kompleks, dan akan sering mendapatkan update.
 
-## Struktur Object Oriented Programming
+### Keuntungan OOP:
+
+- Lebih Aman. Dengan memanfaatkan encapsulation dan abstraction, Kode-kode yang penting dan rumit menjadi terisolasi/terlindungi.
+- Membantu kita untuk tidak menulis kode yang sama secara berulang(DRY Concept).
+- Kodingan menjadi lebih singkat, dapat digunakan kembali(reusable).
+- Membuat aplikasi lebih terstruktur.
+- Mempermudah proses maintenance.
+- Memudahkan scalability.
+
+### Struktur Object-Oriented Programming
 
 | Nama      | Deskripsi                                                                                                                               |
 | --------- | --------------------------------------------------------------------------------------------------------------------------------------- |
@@ -21,3 +30,12 @@ Dengan pendekatan yang terfokus kepada objek, maka OOP akan sangat tepat untuk d
 | Object    | Turunan dari sebuah Class yang dibuat berdasarkan template.                                                                             |
 | Method    | Sebuah function yang dibuat didalam Class yang menjelaskan mekanisme dari Class tersebut. Method ini dapat diakses oleh object turunan. |
 | Attribute | Adalah sebuah properti yang dideklarasikan didalam Class untuk mendeskripsikan hal-hal yang dimiliki oleh Class tersebut                |
+
+### 4 Prinsip Utama Object-Oriented Programming
+
+| Principal                    | Deskripsi                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
+| ---------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| Encapsulation (Enkapsulasi)  | Prinsip enkapsulasi dapat meningkatkan keamanan dan mencegah kerusakan data(korup). Prinsip dimana informasi yang dianggap penting dari object akan disembunyikan dan hanya informasi tertentu saja yang di ekspos. Segala attribute akan dijadikan private didalam Class sehingga object pewarisnya tidak bisa mengakses atau membuat perubahan informasi attribute tersebut. Object pewaris hanya bisa mengkases method yang dideklarasikan secara public. |
+| Abstraction (Abstraksi)      |                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
+| Inheritance (Pewarisan)      |                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
+| Polymorphism (Banyak Bentuk) |                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
