refactor intro.mdx

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -20,3 +20,5 @@ Perhatikan ilustrasi berikut:
 ![Ilustrasi HTML, CSS, dan Javascript di aplikasi web](./assets/bahasjs-html-css-js.png)
 
 Jika HTML adalah struktur website, css adalah desain tampilan website, maka Javascript adalah yang membuat websitenya menjadi lebih menarik dan interaktif.
+
+Tapi sebelum membahas Javascript terlalu jauh, mari kita belajar dasar pemrograman Javascript terlebih dahulu, supaya kita memiliki pondasi yang kuat dimasa depan.
