--- a/blog/2023/01/01/javascript-object-oriented/index.mdx
+++ b/blog/2023/01/01/javascript-object-oriented/index.mdx
@@ -2,7 +2,7 @@
 title: Object-Oriented Programming
 slug: object 0riented Programming
 authors: [rizky]
-tags: [pemrograman, pemula]
+tags: [pemrograman, pemula, oop]
 ---
 
 Belajar Object-Oriented Programming dan bagaimana penerapannya di bahasa Javascript.
@@ -33,9 +33,9 @@ Dengan pendekatan yang terfokus kepada objek, maka OOP akan sangat tepat untuk d
 
 ### 4 Prinsip Utama Object-Oriented Programming
 
-| Principal                    | Deskripsi                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
-| ---------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| Encapsulation (Enkapsulasi)  | Prinsip enkapsulasi dapat meningkatkan keamanan dan mencegah kerusakan data(korup). Prinsip dimana informasi yang dianggap penting dari object akan disembunyikan dan hanya informasi tertentu saja yang di ekspos. Segala attribute akan dijadikan private didalam Class sehingga object pewarisnya tidak bisa mengakses atau membuat perubahan informasi attribute tersebut. Object pewaris hanya bisa mengkases method yang dideklarasikan secara public. |
-| Abstraction (Abstraksi)      |                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
-| Inheritance (Pewarisan)      |                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
-| Polymorphism (Banyak Bentuk) |                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
+| Principal                    | Deskripsi                                                                                                                                                                                                                                                                                                                                                                                                                                            |
+| ---------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Encapsulation (Enkapsulasi)  | Enkapsulasi dapat meningkatkan keamanan dan mencegah kerusakan data(korup). Prinsip dimana informasi yang dianggap penting dari object akan disembunyikan dan hanya informasi tertentu saja yang di ekspos. Segala attribute akan dijadikan private didalam Class sehingga object pewarisnya tidak bisa mengakses atau membuat perubahan informasi attribute tersebut. Object pewaris hanya bisa mengkases method yang dideklarasikan secara public. |
+| Abstraction (Abstraksi)      | Menyembunyikan kode-kode yang tidak diperlukan, dan hanya memberikan yang relevan untuk objek lain saja.                                                                                                                                                                                                                                                                                                                                             |
+| Inheritance (Pewarisan)      | `Class` dapat digunakan didalam `class` lain. Semua attribute dari sebuah `class` dapat diwarisi oleh `class` lain. Rizky memiliki anak bernama Alex. Alex dapat mewarisi sifat Rizky, meskipun Alex juga bisa memiliki sifat sendiri.                                                                                                                                                                                                               |
+| Polymorphism (Banyak Bentuk) | Dapat diimplementasikan ke banyak bentuk. Rizky dalam satu waktu dapat menjadi beberapa karakter. Rizky dapat menjadi ayah, suami, dan seorang seniman sekaligus. Begitulah analogi sederhana _polymorphism_.                                                                                                                                                                                                                                        |
