update variable tuts

--- a/docs/javascript-dasar-1/value-variable.mdx
+++ b/docs/javascript-dasar-1/value-variable.mdx
@@ -2,15 +2,20 @@
 sidebar_position: 2
 ---
 
-# Value dan Variable
-
 import BeautySentence from "@site/src/components/chunks/BeautySentence";
 
-Kamu beneran mulai! Semoga kamu bisa komitmen belajarnya ya. Selamat belajar!
+# Variable
 
-## Apa itu value dan variable?
+:::info
+
+### Apa itu variable?
+
+Variable digunakan untuk menyimpan informasi(value) sehingga bisa digunakan sebagai referensi.
+
+### Apa itu value?
 
 Value dan variable ibarat sendal kiri dan kanan, mereka ada dan selalu <BeautySentence>bersama</BeautySentence> untuk saling melengkapi! Meski begitu, keduanya memiliki definisi masing-masing loh. Seperti apa? Yuk kita pahami penjelasan dibawah ini!
+:::
 
 ## Penjelasan Dasar
 
